# GenerativeAI

./: .pdm-python  pyproject.toml
Agents_fromScratch/: notebook.ipynb
